# text2digits_es

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/: workflows
.github/workflows/: test.yml
text2digits_es/: __init__.py  test_translate.py  translate.py
text2digits_es/lang/: es.py
