[tool.poetry]
name = "text2digits_es"
version = "1.0"
description = "Convert spanish number text to its numerical representation."
authors = ["Alejandro Alcalde <algui91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pycodestyle = "^2.6.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
